# PN-EOM

./: .gitignore  Cargo.toml  README.md  main.rs
num_core/: dop54.rs  io_config.rs  mod.rs  n_body.rs  smp_vector.rs
parameters/: test.yaml
